fix alignment

--- a/app/styles/scss/layout/_main.scss
+++ b/app/styles/scss/layout/_main.scss
@@ -157,6 +157,7 @@ body{
 
         @media (max-width: 1600px) {
             width: 80%;
+            margin-left: 10%;
         }
         @media (max-width: 800px) {
             width: 100%;
